fix: removed min max height to fix overlapping

--- a/holy-grail-frontend/src/features/SignIn/login.css
+++ b/holy-grail-frontend/src/features/SignIn/login.css
@@ -6,14 +6,6 @@
     padding-top: calc(var(--header-height) + 1rem);
 }
 
-.login,
-.forgotPw {
-    max-height: calc(80vh - var(--header-height));
-}
-
-.resetPw {
-    min-height: calc(80vh - var(--header-height));
-}
 
 .login__title {
     font-size: calc(var(--h2-font-size) * 1.5);
